# opbasis

./: LICENSE  Makefile  README.md  pyproject.toml
doc/: blocks.html  genindex.html  minBasis.html  pauli.html  py-modindex.html  search.html
docs/: basics.html  blocks.html  calculus.html  changelog.html  dirac.html  eoms.html  genindex.html  index.html  io.html  minBasis.html  objects.inv  opBasis.html  ops.html  pauli.html  py-modindex.html  reps.html  search.html  searchindex.js  templates.html
docs/_static/styles/: custom.css
examples/: findBasis.py
examples/models/: Staggered.in  Wilson.in
examples/transformations/: Staggered.py  default.py
models/: pureGauge.in
opBasis/: __init__.py  basics.py  blocks.py  io.py  minBasis.py  opBasis.py  ops.py  templates.py
opbasis/: __init__.py  basics.py  blocks.py  calculus.py  dirac.py  eoms.py  io.py  minBasis.py  opBasis.py  ops.py  pauli.py  reps.py  templates.py
transformations/: default.py
