[project]
name = "opbasis"
version = "1.0.0a1"
description = "Python scripts to derive a minimal operator basis for lattice gauge theory."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Nikolai Husung", email = "nikolai.husung@cern.ch"}]
requires-python = ">=3.10"
dependencies = [
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["lattice field theory", "operator basis"]

[project.urls]
Repository = "https://github.com/nikolai-husung/opbasis"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["opbasis"]
